deployment/deployment.dev.yml
apiVersion: v1
kind: Namespace
metadata:
  name: TOPLS-ns
  labels:
    project: topls-duy

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: topls-duy-ingress
  namespace: TOPLS-ns
  labels:
    project: topls-duy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  rules:
    - host: dev1.digitop.vn
      http:
        paths:
          - path: /topls-duy
            pathType: Prefix
            backend:
              service:
                name: topls-duy-svc
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: topls-duy-svc
  namespace: TOPLS-ns
  labels:
    app: topls-duy
    project: topls-duy
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: topls-duy
  sessionAffinity: ClientIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topls-duy
  namespace: TOPLS-ns
  labels:
    project: topls-duy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: topls-duy
  template:
    metadata:
      labels:
        app: topls-duy
        project: topls-duy
    spec:
      containers:
        - name: topls-duy
          image: 'asia.gcr.io/top-group-k8s/topls-duy:2022-05-17-17-33-32'
          ports:
            - containerPort: 3000
          resources: {}
---
